added a social panel
Thanks Florin Pop - I used yours until I add my own 😋

--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -19,9 +19,7 @@
 // 4 - LAYOUT
 @import '4-layouts/hunger'
 @import '4-layouts/randomMeal'
-
-
-
+@import '4-layouts/social'
 
 // 5 - MODULES
 @import '5-modules/flex-video'
